[package]
name = "tfrecords"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-async-std", "tls-native-tls", "chrono"]}
async-std = {version = "1.13.2", features = ["attributes"]}
serde_json = "1.0"
serde = "1.0"
chrono = {version = "0.4", features = ["serde"]}
tokio = {version = "1.43", features = ["macros", "rt-multi-thread", "sync"]}
tokio-macros = { version = "0.2.0-alpha.6" }
